# freegto

./: README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: 6max_nlhe.json  9max_nlhe.json  hu_nlhe.json
src/freegto/: cards.py  cfr.py  cli.py  config.py  game.py  range_parser.py
tests/: test_config.py  test_game.py  test_solver.py
