[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freegto"
version = "0.1.0"
description = "Linux-first NVIDIA GPU-capable Texas Hold'em solver prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gpu = ["torch>=2.2"]

[project.scripts]
holdem-solve = "freegto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
